executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-daconf-@fpi-name@-unver
spec:
  selector:
    istio: egressgateway-@fpi-name@-unver
  servers:
    - hosts:
        - '${@fpi-name@.ctr.istio.egress.se.http.daconf.host}'
      port:
        name: http-2000
        number: 2000
        protocol: HTTP
