executor-distribution/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-daconf-@fpi-name@-unver
spec:
  exportTo:
    - .
  hosts:
    - '${@fpi-name@.ctr.istio.egress.se.http.daconf.host}'
  gateways:
    - mesh
    - egressgateway-daconf-@fpi-name@-unver
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: egressgateway-daconf-@fpi-name@-unver
            port:
              number: 2000
    - match:
        - gateways:
            - egressgateway-daconf-@fpi-name@-unver
          port: 2000
      route:
        - destination:
            host: ${@fpi-name@.ctr.istio.egress.se.http.daconf.host}
            port:
              number: ${@fpi-name@.ctr.istio.egress.se.http.daconf.port}
